added in livestamp package

--- a/client/app.html
+++ b/client/app.html
@@ -60,7 +60,7 @@
   <div class="tweet">
     <div class="tweetContent">
       <div class="tweetBody" style="display: inline-block; max-width: 520px;">
-        <h5><span class="blueUnderline"><strong>{{author}}</strong></span> {{tweetText}} <span class="tweetTime blueUnderline">{{submittedAt}}</span></h5>
+        <h5><span class="blueUnderline"><strong>{{author}}</strong></span> {{tweetText}} <span class="tweetTime blueUnderline" data-livestamp={{submittedAt}}></span></h5>
       </div>
     </div>
   </div>
